resolve overflow issue

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -20,17 +20,14 @@
     box-shadow: 10px 2px 20px 0px rgba(68, 68, 68, 0.5);
 
     &_base {
-      &_left_menu {
+      &_left_menu,
+      &_menu_item > img {
         filter: invert(1);
       }
 
       &_right {
         color: map-get($color, primary);
         border: 1px solid #000 !important;
-      }
-
-      &_menu_item > img {
-        filter: invert(1);
       }
     }
   }
